--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ Gerar mapeamento dos eventos com links dinâmicos link: `/events/${event.name.to
 Remover botão comprar de eventos futuros (criar flag de evento "ativo")
 Flag de adm no usuário, sempre colocar como 0, só tem como colocar como 1 cadastrando manualmente
 Precisa ter 18 anos para ter conta
+Validar a opção de salvar senha do meu perfil
