Corrigindo validações do suporte

--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-Corrigir mensagens de erro do navegador no suporte ao fã
 Flag de adm no usuário, sempre colocar como 0, só tem como colocar como 1 cadastrando manualmente
 Colocar cookies nos ingressos antes da confirmação
 Mostrar se o ingresso está esgotado ou não
@@ -6,3 +5,4 @@ Ver se data do evento ainda não passou (para saber se mostra o botão de compra
 Barra de pesquisa de eventos
 Associar artista a evento??
 Só permitir comprar ingresso quando estiver logado
+Fazer os meus pedidos
