Integrando compra de ingressos (início)

--- a/TODO
+++ b/TODO
@@ -4,3 +4,6 @@ Ver se data do evento ainda não passou (para saber se mostra o botão de compra
 Fazer css da pesquisa de eventos
 Só permitir comprar ingresso quando estiver logado
 Pop up de ações concluídas com sucesso
+Validar dados de pagamento
+Fazer iduser idevent iddate ser um id unico
+Limitar 4 ingressos por cpf?
